--- a/uvod-do-programovani-2/uvod/entry.yml
+++ b/uvod-do-programovani-2/uvod/entry.yml
@@ -1,4 +1,7 @@
 title: Co všechno už umíme
 lead: Zopakujeme si, co všechno už umíme, abychom na tyto znalosti mohli navázat.
 sections:
-  - lesson
+  - uvod
+  - podminky
+  - sekvence
+  - cykly
