Fix excs for slovniky-a-cykly/

--- a/uvod-do-programovani-2/slovniky-a-cykly/entry.yml
+++ b/uvod-do-programovani-2/slovniky-a-cykly/entry.yml
@@ -3,6 +3,8 @@ lead: Vyzkoušíme si, jak se slovníky pracovat pomocí cyklů.
 sections:
   - slovniky-a-cykly
   - dvourozmerne-tabulky
-  - cteni-na-doma-financni-vyrovnani
-  - cteni-na-doma-filter
   - excs
+  - cteni-na-doma-financni-vyrovnani
+  - excs-2
+  - cteni-na-doma-filter
+  
