--- a/uvod-do-programovani-2/uvod/entry.yml
+++ b/uvod-do-programovani-2/uvod/entry.yml
@@ -1,5 +1,5 @@
 title: Co všechno už umíme
-lead: Zopakujeme si, co všechno už umíme, abychom na tyto znalosti mohli navázat.
+lead: Zopakujeme si, co všechno už umíme, abychom na tyto znalosti mohli navázat
 sections:
   - uvod
   - podminky
