--- a/entry.yml
+++ b/entry.yml
@@ -1,6 +1,6 @@
 title: Úvod do programování 2
 lead: Navazující kurz, ve kterém si prohloubíte znalosti jazyka Python
-image: python.svg
+image: assets/python.svg
 chapters:
   - uvod-do-programovani-2
   - bonusy
